Registration, Update with tests
